week-5: правки по комментариям

--- a/projects/cookie/cookie.html
+++ b/projects/cookie/cookie.html
@@ -27,13 +27,13 @@
 
 <div id="app">
     <div id="filter-block">
-        Поиск cookie: <input id="filter-name-input" placeholder="имя cookie" type="text">
+        Поиск cookie: <input autocomplete="off" id="filter-name-input" placeholder="имя cookie" type="text">
     </div>
     <hr>
     <div id="add-block">
         Добавить cookie:<br>
-        <input id="add-name-input" placeholder="имя cookie" type="text"><br>
-        <input id="add-value-input" placeholder="значение cookie" type="text"><br>
+        <input autocomplete="off" id="add-name-input" placeholder="имя cookie" type="text"><br>
+        <input autocomplete="off" id="add-value-input" placeholder="значение cookie" type="text"><br>
         <button id="add-button">добавить cookie</button>
     </div>
     <hr>
