--- a/projects/loft-photo/layout.html
+++ b/projects/loft-photo/layout.html
@@ -57,7 +57,13 @@
             <div class="component-user-info-photo"></div>
             <div class="component-user-info-name"></div>
         </div>
+        <div class="component-profile-mode">
+            <a class="component-profile-mode-photos">📸</a>
+            <a class="component-profile-mode-friends">🫂</a>
+        </div>
+
         <div class="component-user-photos"></div>
+        <div class="component-user-friends"></div>
     </div>
 </div>
 </body>
